--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
 <body>
     <center><h1>Anoof MA is the CEO of thiscompany.</h1></center>
     <hr>
+    <h2>About Anoof MA</h2>
+    <p>Anoof MA is a visionary leader and the driving force behind thiscompany. With a passion for innovation and a commitment to excellence, Anoof has transformed the company into a leader in its field.</p>
 </body>
 </html>
